# mrgee-fx

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
scripts/: bootstrap_deps.sh
src/: JsfxHost.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
